Corrigido bug que alterava a cadeia ao desistir de arrastar sintagmas. Menções selecionadas sutilmente aumentadas. Pequenas mudanças na interface.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,11 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jdom-2.0.6.jar=/home/visinius/NetBeansProjects/jdom-2.0.6/jdom-2.0.6.jar
+file.reference.jdom-2.0.6.jar-1=lib/jdom-2.0.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.jdom-2.0.6.jar}
+    ${file.reference.jdom-2.0.6.jar}:\
+    ${file.reference.jdom-2.0.6.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
