Logs adicionados, aparentemente funcionais.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -77,3 +77,4 @@ run.test.classpath=\
 source.encoding=ISO-8859-1
 src.dir=src
 test.src.dir=test
+run.args.extra=-J-java.util.logging.SimpleFormatter.format="%1$tc %2$s%n%4$s: %5$s%6$s%n"
